--- a/_includes/_macro/reward.html
+++ b/_includes/_macro/reward.html
@@ -14,7 +14,7 @@
       {% if site.alipay %}
         <div id="alipay" style="display: inline-block">
           <img id="alipay_qr" src="{{ site.alipay }}" alt="{{ site.author }} Alipay"/>
-          <p>支付宝打赏</p>
+          <p>微信打赏</p>
         </div>
       {% endif %}
     </div>
